Support HTTP Range Requests for accessing encapsulated videos by WADO-URI or WADO-RS Rendered Instance #4879